syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1030
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarSkillChangeNotify {
	uint64 avatar_guid = 4;
	uint32 entity_id = 15;
	uint32 skill_depot_id = 5;
	uint32 avatar_skill_id = 2;
	uint32 old_level = 10;
	uint32 cur_level = 7;
}
